--- a/homework_14/index.html
+++ b/homework_14/index.html
@@ -204,9 +204,10 @@
                     <div class="one-column-group">
                       <div
                         class="one-column-group__input-block input-block input-block--text-area">
-                        <label class="label" for="street-adress">Order Notes
+                        <label class="label" for="textarea">Order Notes
                           <span>(Optional)</span></label>
                         <textarea
+                          id="textarea"
                           class="text-input"
                           placeholder="Notes about your order, e.g. special notes for delivery"></textarea>
                       </div>
