--- a/homework_14/index.html
+++ b/homework_14/index.html
@@ -221,23 +221,23 @@
                   <div class="order-summery">
                     <div class="order-summery__products-list">
                       <div class="product-summary">
-                        <div class="product-summary__description">
+                        <a href="#" class="product-summary__link">
                           <div class="product-summary__img">
                             <img src="img/product-1.webp" alt="image">
                           </div>
                           <p class="product-summary__title">Green Capsicum</p>
                           <p class="product-summary__amount">x5</p>
-                        </div>
+                        </a>
                         <p class="product-summary__price">$70.00</p>
                       </div>
                       <div class="product-summary">
-                        <div class="product-summary__description">
+                        <a href="#" class="product-summary__link">
                           <div class="product-summary__img">
                             <img src="img/product-2.webp" alt="image">
                           </div>
                           <p class="product-summary__title">Red Capsicum</p>
                           <p class="product-summary__amount">x1</p>
-                        </div>
+                        </a>
                         <p class="product-summary__price">$70.00</p>
                       </div>
                     </div>
