--- a/homework_16-v2/index.html
+++ b/homework_16-v2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,22 +14,22 @@
             <img class="logo-header__icon" src="img/logo.svg" alt="Img">
             <span class="logo-header__text">Education Pro</span>
           </a>
-          <div class="menu">
+          <div class="menu" >
             <ul class="menu__list">
               <li class="menu__item">
-                <a href class="menu__link">About</a>
+                <a href="#" class="menu__link">About</a>
               </li>
               <li class="menu__item">
-                <a href class="menu__link">Services</a>
+                <a href="#" class="menu__link">Services</a>
               </li>
               <li class="menu__item">
-                <a href class="menu__link">Quality Policy</a>
+                <a href="#" class="menu__link">Quality Policy</a>
               </li>
               <li class="menu__item">
-                <a href class="menu__link">Languages</a>
+                <a href="#" class="menu__link">Languages</a>
               </li>
               <li class="menu__item">
-                <a href class="menu__link">Contact</a>
+                <a href="#" class="menu__link">Contact</a>
               </li>
             </ul>
           </div>
