--- a/homework_15/index.html
+++ b/homework_15/index.html
@@ -290,7 +290,7 @@
                       Admin</div>
                     <div
                       class="label-news label-news--comments">
-                      <span>65</span> Comments
+                      <p class="label-news__text"><span>65</span> Comments</p>
                     </div>
                   </div>
                   <h3 class="card-news__title">
@@ -313,7 +313,7 @@
                       Admin</div>
                     <div
                       class="label-news label-news--comments">
-                      <span>65</span> Comments
+                      <p class="label-news__text"><span>65</span> Comments</p>
                     </div>
                   </div>
                   <h3 class="card-news__title">
@@ -336,7 +336,7 @@
                       Admin</div>
                     <div
                       class="label-news label-news--comments">
-                      <span>65</span> Comments
+                      <p class="label-news__text"><span>65</span> Comments</p>
                     </div>
                   </div>
                   <h3 class="card-news__title">
