--- a/homework_17/index.html
+++ b/homework_17/index.html
@@ -255,7 +255,7 @@
               </div>
             </div>
             <div class="ecobazar-task__best-seller-bottom goods">
-              <div class="goods__column">
+              <div class="goods__column goods__column--1">
                 <h3 class="goods__title">Hot Deals</h3>
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
@@ -417,7 +417,7 @@
                   </div>
                 </div>
               </div>
-              <div class="goods__column">
+              <div class="goods__column goods__column--2">
                 <h3 class="goods__title">Best Seller</h3>
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
@@ -483,7 +483,8 @@
                         <h3 class="product-card__title">
                           <a href="#">Red Capsicum</a>
                         </h3>
-                        <div class="product-card__price">$14.99</div>
+                        <div class="product-card__price">$14.99
+                          <span>$20.99</span></div>
                       </div>
                       <div class="product-card__rating">
                         <img src="img/ecobazar/rating.webp"
@@ -579,7 +580,7 @@
                   </div>
                 </div>
               </div>
-              <div class="goods__column">
+              <div class="goods__column goods__column--3">
                 <h3 class="goods__title">Top Rated</h3>
                 <div class="goods__item product-card product-card--goods">
                   <a href="#" class="product-card__image">
@@ -645,7 +646,8 @@
                         <h3 class="product-card__title">
                           <a href="#">Corn</a>
                         </h3>
-                        <div class="product-card__price">$14.99</div>
+                        <div class="product-card__price">$14.99
+                          <span>$20.99</span></div>
                       </div>
                       <div class="product-card__rating">
                         <img src="img/ecobazar/rating.webp"
@@ -759,17 +761,170 @@
               </div>
             </div>
           </div>
-        </main>
+        </div>
+        <!-- BLOSSOMIA -->
+        <div class="page__task-2 blossomia-task">
+          <div class="blossomia-task__container">
+            <div class="blossomia-task__content">
+              <h2 class="blossomia-task__title">
+                Catalog of Floral Delights for Every Occasion
+              </h2>
+              <div class="flavor-card">
+                <div class="flavor-card__body">
+                  <div class="flavor-card__img">
+                    <img src="img/blossomia/flavor_1.avif" alt="Flavor">
+                  </div>
+                  <div class="flavor-card__content">
+                    <div class="flavor-card__info">
+                      <h3 class="flavor-card__title">
+                        <a href="#">Enchanted Petals</a>
+                      </h3>
+                      <div class="flavor-card__price">70 Euro</div>
+                    </div>
+                    <div class="flavor-card__action-buttons">
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/heart.svg" alt="Like btn">
+                      </button>
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/cart.svg" alt="Cart btn">
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="flavor-card">
+                <div class="flavor-card__body">
+                  <div class="flavor-card__img">
+                    <img src="img/blossomia/flavor_2.avif" alt="Flavor">
+                  </div>
+                  <div class="flavor-card__content">
+                    <div class="flavor-card__info">
+                      <h3 class="flavor-card__title">
+                        <a href="#">Whispering Meadows</a>
+                      </h3>
+                      <div class="flavor-card__price">45 Euro</div>
+                    </div>
+                    <div class="flavor-card__action-buttons">
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/heart.svg" alt="Like btn">
+                      </button>
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/cart.svg" alt="Cart btn">
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="flavor-card">
+                <div class="flavor-card__body">
+                  <div class="flavor-card__img">
+                    <img src="img/blossomia/flavor_3.avif" alt="Flavor">
+                  </div>
+                  <div class="flavor-card__content">
+                    <div class="flavor-card__info">
+                      <h3 class="flavor-card__title">
+                        <a href="#">Serene Bliss</a>
+                      </h3>
+                      <div class="flavor-card__price">60 Euro</div>
+                    </div>
+                    <div class="flavor-card__action-buttons">
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/heart.svg" alt="Like btn">
+                      </button>
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/cart.svg" alt="Cart btn">
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="flavor-card">
+                <div class="flavor-card__body">
+                  <div class="flavor-card__img">
+                    <img src="img/blossomia/flavor_4.avif" alt="Flavor">
+                  </div>
+                  <div class="flavor-card__content">
+                    <div class="flavor-card__info">
+                      <h3 class="flavor-card__title">
+                        <a href="#">Floral Harmony</a>
+                      </h3>
+                      <div class="flavor-card__price">80 Euro</div>
+                    </div>
+                    <div class="flavor-card__action-buttons">
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/heart.svg" alt="Like btn">
+                      </button>
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/cart.svg" alt="Cart btn">
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="flavor-card">
+                <div class="flavor-card__body">
+                  <div class="flavor-card__img">
+                    <img src="img/blossomia/flavor_5.avif" alt="Flavor">
+                  </div>
+                  <div class="flavor-card__content">
+                    <div class="flavor-card__info">
+                      <h3 class="flavor-card__title">
+                        <a href="#">Springtime Serenade</a>
+                      </h3>
+                      <div class="flavor-card__price">65 Euro</div>
+                    </div>
+                    <div class="flavor-card__action-buttons">
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/heart.svg" alt="Like btn">
+                      </button>
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/cart.svg" alt="Cart btn">
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="flavor-card">
+                <div class="flavor-card__body">
+                  <div class="flavor-card__img">
+                    <img src="img/blossomia/flavor_6.avif" alt="Flavor">
+                  </div>
+                  <div class="flavor-card__content">
+                    <div class="flavor-card__info">
+                      <h3 class="flavor-card__title">
+                        <a href="#">Blooming Splendor</a>
+                      </h3>
+                      <div class="flavor-card__price">50 Euro</div>
+                    </div>
+                    <div class="flavor-card__action-buttons">
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/heart.svg" alt="Like btn">
+                      </button>
+                      <button class="flavor-card__action-btn">
+                        <img src="img/blossomia/icons/cart.svg" alt="Cart btn">
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-        <footer class="footer">
-          <div class="footer__container">
-            <p>
-              -------------------------------------------------------------------------------
-            </p>
-            <p class="footer__title">Тут має бути футер</p>
+              <button class="more-btn">
+                <span class="more-btn__inner">Open More</span>
+              </button>
+            </div>
           </div>
-        </footer>
-      </div>
-      <script src="js/script.js"></script>
-    </body>
-  </html>
+        </div>
+      </main>
+
+      <footer class="footer">
+        <div class="footer__container">
+          <p>
+            -------------------------------------------------------------------------------
+          </p>
+          <p class="footer__title">Тут має бути футер</p>
+        </div>
+      </footer>
+    </div>
+    <script src="js/script.js"></script>
+  </body>
+</html>
