--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>04.Шрифти та текст</title>
+    <title>Другий тайтал</title>
   </head>
   <body>
     <header>
